--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
     padding-left: 20%;
     padding-top: 5%;
 }
-.imagelist{
+.listitem{
+    text-align:justify;
     width: 300px;
+    height: 50px;
+    border-radius: 2px;
 }
 p{
     font-size: 20px;
@@ -16,8 +19,24 @@ p{
     height:500px;
     float:right;
 }
+img.logo{
+    padding: 8px;
+    border-radius: 3px;
+    width: 40px;
+    height: 40px;
+    object-fit:cover;
+}
 img{
     width: 300px;
     height: 500px;
     object-fit:cover;
 }
+
+.active {
+    text-align:justify;
+    width: 300px;
+    height: 50px;  
+    background-color:#1E90FF;
+    border-radius: 4px;
+    color: white;
+  }
