--- a/style.css
+++ b/style.css
@@ -1,42 +1,60 @@
-.maincontent{
-    padding-left: 20%;
-    padding-top: 5%;
+body{
+    margin: 0;
+    font-size: 25px;
 }
-.listitem{
-    text-align:justify;
+.float-container {
+    margin-top: 3%;
+    margin-left : 20%;
+    border: 3px solid #fff;
+    
+}
+.float-child {
+    width: 40%;
+    float: left;
+}  
+#floattextbox{
+    margin-top: 10px;
+    padding: 10px 0 10px 0;
+    width: 100%;
+    text-align: center; 
+}
+#floatimagelist{
+    width: 35%;
+}
+.imagelist{
     width: 300px;
-    height: 50px;
-    border-radius: 2px;
 }
-p{
-    font-size: 20px;
+
+.listitemtext{
+    margin: 0;
+    font-size: 18px;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow:ellipsis;
+    /* text-overflow:ellipsis; */
 }
+
 .imagedisplay{
     width:500px;
-    height:500px;
-    float:right;
+    height:700px;
 }
 img.logo{
-    padding: 8px;
-    border-radius: 3px;
-    width: 40px;
-    height: 40px;
+    padding:9px;
+    border-radius: 22%;
+    width: 60px;
+    height: 60px;
     object-fit:cover;
 }
 img{
-    width: 300px;
-    height: 500px;
+    width: 500px;
+    height: 700px;
     object-fit:cover;
+    border-radius: 1%;
 }
-
 .active {
     text-align:justify;
     width: 300px;
-    height: 50px;  
+    height: 81px;  
     background-color:#1E90FF;
     border-radius: 4px;
     color: white;
-  }
+}
