--- a/style.css
+++ b/style.css
@@ -5,41 +5,41 @@ body{
 .float-container {
     margin-top: 3%;
     margin-left : 20%;
-    border: 3px solid #fff;
 }
 .float-child {
+    padding: 10px;
     width: 40%;
     float: left;
 }  
 #floattextbox{
-    margin-top: 10px;
-    padding: 10px 0 10px 0;
+    padding: 10px 0 0 0;
     width: 100%;
     text-align: center; 
 }
 #floatimagelist{
-    width: 35%;
+    width:300px;
 }
 .imagelist{
     width: 300px;
 }
 
 .listitemtext{
+    padding: 10px;
     margin: 0;
-    font-size: 18px;
+    font-size: 17px;
     white-space: nowrap;
     overflow: hidden;
 }
-
 .imagedisplay{
     width:500px;
     height:700px;
 }
 img.logo{
-    padding:9px;
+    vertical-align:middle;
+    padding:0px;
     border-radius: 22%;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     object-fit:cover;
 }
 img{
@@ -51,8 +51,8 @@ img{
 .active {
     text-align:justify;
     width: 300px;
-    height: 81px;  
-    background-color:#1E90FF;
+    height: 62px;  
+    background-color:#3366ff;
     border-radius: 4px;
     color: white;
 }
